--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,20 +1,17 @@
-version: "3.8"
 services:
-  mysql:
-    image: mysql:8.0.33
-    container_name: fastapi-mysql
+  postgres:
+    image: postgres:18rc1-alpine
+    container_name: fastapi-postgres
     restart: always
     ports:
-      - "3306:3306"
+      - "5432:5432"
     environment:
-      MYSQL_USER: fastapi
-      MYSQL_PASSWORD: fastapi
-      MYSQL_DATABASE: fastapi
-      MYSQL_ROOT_PASSWORD: fastapi
-      TZ: "Asia/Seoul"
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: fastapi
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-      - mysqldb:/var/lib/mysql
+      - postgres_data:/var/lib/postgresql/data
 
   redis:
     image: redis:6.2.6
@@ -25,4 +22,4 @@ services:
       - "6379:6379"
 
 volumes:
-  mysqldb:
+  postgres_data:
