--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ gunicorn = "^23.0.0"
 fastapi-event = "^0.1.3"
 pythondi = "^1.2.4"
 ujson = "^5.9.0"
-aiomysql = "^0.2.0"
 click = "^8.1.7"
 redis = "^5.0.1"
 pydantic-settings = "^2.1.0"
@@ -24,9 +23,9 @@ pytest-asyncio = "^0.23.3"
 cryptography = "^41.0.7"
 coverage = "^7.4.0"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
-pymysql = "^1.1.0"
 dependency-injector = "^4.41.0"
 httpx = "^0.26.0"
+asyncpg = "^0.30.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
