--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["ArtemSerdechnyi <artem.serdechnyy@gmail.com>"]
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.11.7"
+python = "^3.11"
 alembic = "^1.13.1"
 uvicorn = "^0.25.0"
 fastapi = "^0.117.1"
@@ -26,6 +26,7 @@ sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
 dependency-injector = "^4.41.0"
 httpx = "^0.26.0"
 asyncpg = "^0.30.0"
+psycopg2 = "^2.9.10"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
