--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependency-injector = "^4.41.0"
 httpx = "^0.26.0"
 asyncpg = "^0.30.0"
 psycopg2 = "^2.9.10"
+websockets = "^15.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
