--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ httpx = "^0.26.0"
 asyncpg = "^0.30.0"
 psycopg2 = "^2.9.10"
 websockets = "^15.0.1"
+python-multipart = "^0.0.20"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
