--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,14 @@ asyncpg = "^0.30.0"
 psycopg2 = "^2.9.10"
 websockets = "^15.0.1"
 python-multipart = "^0.0.20"
+langchain-openai = "^0.3.33"
+langchain = "^0.3.27"
+langchain-core = "^0.3.76"
+langchain-community = "^0.3.29"
+openai = "^1.108.2"
+pandas = "^2.3.2"
+instructor = "^1.11.3"
+openpyxl = "^3.1.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
